--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,13 @@
 body{
+    
+}
+body{
+    background-image: url(https://i.pinimg.com/originals/99/bb/69/99bb69e4680b0bc9c4c806f5f0f87ad5.png)  ;
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: #578ff7;
+
+
 }
 .wrapper{
     display: flex;
@@ -9,7 +17,7 @@ body{
     max-width: 1440px;
     height: 800px;
     padding: 40px;
-    background-image: url(https://i.pinimg.com/originals/99/bb/69/99bb69e4680b0bc9c4c806f5f0f87ad5.png)  ;
+    /* background-image: url(https://i.pinimg.com/originals/99/bb/69/99bb69e4680b0bc9c4c806f5f0f87ad5.png)  ; */
     background-repeat: no-repeat;
    
    
@@ -25,6 +33,7 @@ body{
 }
 h2{
     font-size: 50px;
+    
 }
 .restart{
     width: 175px;
@@ -35,6 +44,10 @@ h2{
     border-radius: 50px;
     border: 2px solid white;
     margin-top: 30px;
+    -moz-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+    -webkit-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+    box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+   
 }
 .space{
     width: 50px;
@@ -66,6 +79,9 @@ h2{
     padding: 10px;
     background-color: white;
     border-radius: 20px;
+    -moz-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+    -webkit-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+    box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
 
 }
 .board-tile{
@@ -127,6 +143,23 @@ h2{
     margin-left: 30px;
     
 }
+.audio{
+    /* display: flex;
+    justify-content: center; */
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin: 10px;
+    
+}
+button{
+    background-color: #578ff7;
+    border: 1px solid white;
+    border-radius: 20px; 
+    -moz-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+    -webkit-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+    box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6); 
+}
 
 .tileWinner{
     background-color: purple;
@@ -159,7 +192,52 @@ h2{
         margin-top: 50px;
     }
     
+    
 }
+.winO{
+    /* background-color: white; */
+    width: 30vw;
+    height: 30vw;
+    position: fixed;
+    top: 30vh;
+    left: 30vw;
+    border-radius: 20px; 
+    visibility: hidden;
+    font-size: 50px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+     align-items: center;
+}
+.winO img{
+    width: 100%;
+    max-height: 80vh;
+    
+}
+.winX{
+    /* background-color: white; */
+    width: 30vw;
+    height: 30vw;
+    position: fixed;
+    top: 30vh;
+    left: 30vw;
+    border-radius: 20px; 
+    visibility: hidden;
+    font-size: 50px;
+    /* text-align: center; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+.winX img{
+    width: 60%;
+    
+    
+}
+
 
 
 .monique{
@@ -170,6 +248,10 @@ h2{
     align-content: center;
     color: white;
     height: 30px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    
     
     
 }
